examples/errors/undefined_4.al
main :: proc () {
	a := foo + 3
}
